Fix style issue (wrong font family)

--- a/app/styles/landing.css
+++ b/app/styles/landing.css
@@ -71,7 +71,6 @@ html {
 }
 .carousel-button {
 	color: #706f6f;
-	font-family: 'Open Sans';
 	font-size: 0.75rem;
 	font-style: normal;
 	font-weight: 400;
